syntax = "proto3";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
package com.exapmle.grpc.systemevent;

message Ack {
    string message = 1;
}

service SystemEventService{
    rpc saveSystemEvent (SystemEventMessage) returns (Ack);
}

message SystemEventMessage {
    string timestamp = 1;
    string serviceName = 2;
    string user = 3;
}
